--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 			<h3 class="text-muted">Edison - Home</h3>
 		</div>
 
-		<div class="jumbotron">
+		<div class="jumbotron" style="background-color: #337AB7; color: #FFFFFF;">
 			<h1>Lets elect the leaders of tomorrow.</h1>
 			<p class="lead">This application has been built to hold the <strong>perfect elections</strong> for the <strong>perfect school</strong>.</p>
 			<p><a class="btn btn-lg btn-success" href="/elections" role="button">Start Elections Now!</a></p>
@@ -39,7 +39,7 @@
 		<div class="row marketing">
 			<div class="col-lg-4">
 				<h4>Simple Design</h4>
-				<p>This app has a simple design, to ensure an optimum user experience.</p>
+				<p>This app has a simple design to ensure an optimum user experience.</p>
 			</div>
 
 			<div class="col-lg-4">
@@ -48,13 +48,13 @@
 			</div>
 
 			<div class="col-lg-4">
-				<h4>Security First.</h4>
-				<p>This app uses latest encryption technology to ensure your election data stays safe</p>
+				<h4>Extremely personalizable</h4>
+				<p>Personalizability allows the audience to identify with the user interface immediately</p>
 			</div>
 		</div>
 
 		<footer class="footer">
-			<p>&copy; Built by Rachit Verma (@rachit23), Rishit Bansal (@thebongy) and Muktaka Joshipura (@theOriginalMuktaka) for only NPS-I purposes.</p>
+			<p>&copy; CC-BY-SA 2.0 Built by Rachit Verma (@rachit23), Rishit Bansal (@thebongy) and Muktaka Joshipura (@theOriginalMuktaka) only for NPS-I purposes.</p>
 		</footer>
 
 	</div>
