Changed directory for images to savedimages

--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Edison - Choose Candidates</title>
+	<title>Edison - Customize Elections</title>
 
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -36,7 +36,7 @@
 					</li>
 				</ul>
 			</nav>
-			<h3 class="text-muted">Edison - Choose Candidates</h3>
+			<h3 class="text-muted">Edison - Customize Elections</h3>
 		</div>
 
 		<div id="container"></div>
