Customize -url change

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 			<nav>
 				<ul class="nav nav-pills pull-right">
 					<li role="presentation" class="active"><a href="/">Home</a></li>
-					<li role="presentation"><a href="/candidates">Candidates</a></li>
+					<li role="presentation"><a href="/customize">Candidates</a></li>
 					<li role="presentation"><a href="/elections">Elections</a></li>
 				</ul>
 			</nav>
