--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -29,7 +29,7 @@
 						<a href="/">Home</a>
 					</li>
 					<li class="active">
-						<a href="/candidates">Candidates</a>
+						<a href="/customize">Candidates</a>
 					</li>
 					<li>
 						<a href="/elections">Elections</a>
