Removed unused js files, created minified files, sending part of updating server complete during elections

--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -10,14 +10,9 @@
 	<meta name="description" content="Choose Candidates">
 	<meta name="author" content="Rachit Verma, Rishit Bansal, Muktaka Joshipura">
 
-	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/static/css/jumbotron-narrow.css">
-	<link rel="stylesheet" href="/static/css/candidatesStyle.css">
+	<link rel="stylesheet" href="/static/css/candidates.min.css">
 
-	<script src="/static/js/jquery-1.12.3.min.js"></script>
-	<script src="/static/js/bootstrap.min.js"></script>
-	<script src="/static/js/jscolor.min.js"></script>
-	<script src="/static/js/candidates.js"></script>
+	<script src="/static/js/candidates.min.js"></script>
 </head>
 
 <body>
