--- a/templates/elections.html
+++ b/templates/elections.html
@@ -10,8 +10,7 @@
 	<meta name='description' content='Conduct Elections'>
 	<meta name='author' content='Rachit Verma, Rishit Bansal, Muktaka Joshipura'>
 
-	<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-	<link href='/static/css/FirstInterface.css' rel='stylesheet'>
+	<link href='/static/css/FirstInterface.min.css' rel='stylesheet'>
 
 	<script src='/static/js/poll.js'></script>
 	<script src='/static/js/FirstInterface.js'></script>
