--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,7 @@
 
 	<title>Edison - Home</title>
 
-	<link href="/static/css/bootstrap.min.css" rel="stylesheet">
-	<link href="/static/css/jumbotron-narrow.css" rel="stylesheet">
+	<link href="/static/css/index.min.css" rel="stylesheet">
 
 </head>
 
@@ -33,7 +32,6 @@
 		<div class="jumbotron" style="background-color: #337AB7; color: #FFFFFF;">
 			<h1>Lets elect the leaders of tomorrow.</h1>
 			<p class="lead">This application has been built to hold the <strong>perfect elections</strong> for the <strong>perfect school</strong>.</p>
-			<p><a class="btn btn-lg btn-success" href="/elections" role="button">Start Elections Now!</a></p>
 		</div>
 
 		<div class="row marketing">
