Update Server on every vote, Reset ALL office election button and functionality added

--- a/static/css/FirstInterface.css
+++ b/static/css/FirstInterface.css
@@ -105,7 +105,7 @@ button.startButton {
 	font-size: 1.5em;
 	border: none;
 	padding: 0.5em 1.5em;
-	margin-top: 0.5em;
+	margin:0.5em;
 }
 
 div.candidateButtonGroup {
