--- a/templates/index.html
+++ b/templates/index.html
@@ -52,10 +52,17 @@
 		</div>
 
 		<footer class="footer">
-			<p>&copy; CC-BY-SA 2.0 Built by Rachit Verma (@rachit23), Rishit Bansal (@thebongy) and Muktaka Joshipura (@theOriginalMuktaka) only for NPS-I purposes.</p>
+			<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0;float:left;margin-right:2px;" id="license" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.<br /> Built by Rachit Verma (@rachit23), Rishit Bansal (@thebongy) and Muktaka Joshipura (@theOriginalMuktaka) only for NPS-I purposes.</p>
 		</footer>
 
 	</div>
+	<script>
+		var img = document.getElementById("license");
+img.onerror = function () {
+    this.style.display = "none";
+}
+
+	</script>
 </body>
 
 </html>
