Fixed animations and did some major fixes.

--- a/pollingbooth/templates/candidates.html
+++ b/pollingbooth/templates/candidates.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Edison - Customize Elections</title>
+	<title>NPS Indiranagar Elections - Customize Elections</title>
 
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,7 +24,7 @@
 						<a href="/">Home</a>
 					</li>
 					<li class="active">
-						<a href="/customize">Candidates</a>
+						<a href="/customize">Customize</a>
 					</li>
 					<li>
 						<a href="/elections">Elections</a>
