--- a/pollingbooth/templates/index.html
+++ b/pollingbooth/templates/index.html
@@ -22,7 +22,7 @@
 			<nav>
 				<ul class="nav nav-pills pull-right">
 					<li role="presentation" class="active"><a href="/">Home</a></li>
-					<li role="presentation"><a href="/customize">Candidates</a></li>
+					<li role="presentation"><a href="/customize">Customize</a></li>
 					<li role="presentation"><a href="/elections">Elections</a></li>
 				</ul>
 			</nav>
@@ -52,16 +52,17 @@
 		</div>
 
 		<footer class="footer">
-			<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0;float:left;margin-right:2px;" id="license" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.<br /> Built by Rachit Verma (@rachit23), Rishit Bansal (@thebongy) and Muktaka Joshipura (@theOriginalMuktaka) only for NPS-I purposes.</p>
+			<p>
+				<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0;float:left;margin-right:2px;" id="license" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+				<br /> Built by Rachit Verma (@rachit23), Rishit Bansal (@thebongy) and Muktaka Joshipura (@theOriginalMuktaka) only for NPS-I purposes.</p>
 		</footer>
 
 	</div>
 	<script>
 		var img = document.getElementById("license");
-img.onerror = function () {
-    this.style.display = "none";
-}
-
+		img.onerror = function () {
+			this.style.display = "none";
+		}
 	</script>
 </body>
 
