--- a/results/templates/setup.html
+++ b/results/templates/setup.html
@@ -2,6 +2,11 @@
 <html>
 
 <body>
+
+	<head>
+		<title>Setup</title>
+		<script></script>
+	</head>
 	<script>
 		function merge() {
 			xhr = new XMLHttpRequest();
