--- a/results/static/css/FirstInterface.css
+++ b/results/static/css/FirstInterface.css
@@ -125,7 +125,6 @@ div.candidateButtonGroup {
 }
 
 button.candidateButton {
-	display: inline-block;
 	position: relative;
 	height: 100%;
 	margin: 0em 0.5%;
@@ -136,7 +135,9 @@ button.candidateButton {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: top;
+	transition-property: all;
 	transition-duration: 0.5s;
+	overflow: hidden;
 }
 
 button.candidateButton.winner {
