--- a/results/templates/elections.html
+++ b/results/templates/elections.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Edison - Elections</title>
+	<title>NPS Indiranagar Elections</title>
 
 	<meta charset='UTF-8'>
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
