--- a/results/templates/index.html
+++ b/results/templates/index.html
@@ -22,12 +22,11 @@
 			<nav>
 				<ul class="nav nav-pills pull-right">
 					<li role="presentation" class="active"><a href="/">Home</a></li>
-					<li role="presentation"><a href="/customize">Candidates</a></li>
 					<li role="presentation"><a href="/elections">Elections</a></li>
 					<li role="presentation"><a href="/setup">Setup</a></li>
 				</ul>
 			</nav>
-			<h3 class="text-muted">Edison - Home</h3>
+			<h3 class="text-muted">NPS Indiranagar Elections - Home</h3>
 		</div>
 
 		<div class="jumbotron" style="background-color: #337AB7; color: #FFFFFF;">
