Increased size of next button, allowed numbers for office

--- a/pollingbooth/templates/candidates.html
+++ b/pollingbooth/templates/candidates.html
@@ -12,7 +12,7 @@
 
 	<link rel="stylesheet" href="/static/css/candidates.min.css">
 
-	<script src="/static/js/candidates.min.js"></script>
+	<script src="/static/js/candidates.js"></script>
 </head>
 
 <body>
