--- a/pollingbooth/static/css/FirstInterface2.css
+++ b/pollingbooth/static/css/FirstInterface2.css
@@ -189,6 +189,7 @@ div.controls>button {
 	border-width: 1px;
 	padding: 0.5em 1em;
 	margin-left: 0.5em;
+	font-size:25px;
 }
 
 div#resultsSlide {
