--- a/pollingbooth/static/css/FirstInterface2.css
+++ b/pollingbooth/static/css/FirstInterface2.css
@@ -177,6 +177,7 @@ div.controls {
 	position: absolute;
 	bottom: 1.5em;
 	right: 1.5em;
+	left: 1.5em;
 }
 
 div.controls>button {
@@ -184,7 +185,7 @@ div.controls>button {
 	border-width: 1px;
 	padding: 0.5em 1em;
 	margin-left: 0.5em;
-	font-size:25px;
+	font-size: 25px;
 }
 
 div.confirmContainer {
